--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-syntax-highlighter": "^15.5.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
