--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
