--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs/config": "^3.2.1",
     "dotenv": "^16.4.5",
     "next": "14.1.3",
     "nodemailer": "^6.9.13",
