--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nestjs/config": "^3.2.1",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "next": "14.1.3",
     "nodemailer": "^6.9.13",
