--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
+    "sweetalert2": "^11.10.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
